--- a/TableScrolling/Base.lproj/Main.storyboard
+++ b/TableScrolling/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,54 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0cb-zy-ADO">
+                                <rect key="frame" x="0.0" y="58" width="375" height="609"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <sections/>
+                            </tableView>
+                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k80-dR-nXQ">
+                                <rect key="frame" x="0.0" y="539" width="375" height="128"/>
+                                <color key="backgroundColor" red="1" green="0.22054638660000001" blue="0.34724568280000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="aDS-rs-aXF"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoR-hw-bBw">
+                                <rect key="frame" x="0.0" y="20" width="63" height="30"/>
+                                <state key="normal" title="Scroll UP"/>
+                                <connections>
+                                    <action selector="scrollAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mqp-cH-wOE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k80-dR-nXQ" secondAttribute="trailing" id="610-lt-QhA"/>
+                            <constraint firstItem="0cb-zy-ADO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8MU-6H-19z"/>
+                            <constraint firstItem="k80-dR-nXQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VVD-kr-R5o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="k80-dR-nXQ" secondAttribute="bottom" id="Z9n-o1-uTl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0cb-zy-ADO" secondAttribute="trailing" id="Zdg-rK-rSv"/>
+                            <constraint firstItem="qoR-hw-bBw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bbH-MI-fu1"/>
+                            <constraint firstItem="0cb-zy-ADO" firstAttribute="top" secondItem="qoR-hw-bBw" secondAttribute="bottom" constant="8" symbolic="YES" id="fgQ-UA-B1a"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0cb-zy-ADO" secondAttribute="bottom" id="n51-SU-HmW"/>
+                            <constraint firstItem="qoR-hw-bBw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zf9-Nw-SZ6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="scrollButton" destination="qoR-hw-bBw" id="UPt-or-zWS"/>
+                        <outlet property="stickerView" destination="k80-dR-nXQ" id="V9c-Rf-OfN"/>
+                        <outlet property="tableView" destination="0cb-zy-ADO" id="8MA-JP-g5Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="80.799999999999997" y="32.833583208395808"/>
         </scene>
     </scenes>
 </document>
