--- a/TableScrolling/Base.lproj/Main.storyboard
+++ b/TableScrolling/Base.lproj/Main.storyboard
@@ -23,38 +23,36 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <sections/>
                             </tableView>
-                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k80-dR-nXQ">
-                                <rect key="frame" x="0.0" y="539" width="375" height="128"/>
-                                <color key="backgroundColor" red="1" green="0.22054638660000001" blue="0.34724568280000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="aDS-rs-aXF"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoR-hw-bBw">
-                                <rect key="frame" x="0.0" y="20" width="63" height="30"/>
-                                <state key="normal" title="Scroll UP"/>
+                                <rect key="frame" x="0.0" y="20" width="47" height="30"/>
+                                <state key="normal" title="View A"/>
                                 <connections>
                                     <action selector="scrollAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mqp-cH-wOE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hcj-uE-w5w">
+                                <rect key="frame" x="200" y="20" width="47" height="30"/>
+                                <state key="normal" title="View B"/>
+                                <connections>
+                                    <action selector="viewBAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="G8Y-1U-HEP"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k80-dR-nXQ" secondAttribute="trailing" id="610-lt-QhA"/>
                             <constraint firstItem="0cb-zy-ADO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8MU-6H-19z"/>
-                            <constraint firstItem="k80-dR-nXQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VVD-kr-R5o"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="k80-dR-nXQ" secondAttribute="bottom" id="Z9n-o1-uTl"/>
+                            <constraint firstItem="Hcj-uE-w5w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="200" id="D9b-1O-HpI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0cb-zy-ADO" secondAttribute="trailing" id="Zdg-rK-rSv"/>
                             <constraint firstItem="qoR-hw-bBw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bbH-MI-fu1"/>
                             <constraint firstItem="0cb-zy-ADO" firstAttribute="top" secondItem="qoR-hw-bBw" secondAttribute="bottom" constant="8" symbolic="YES" id="fgQ-UA-B1a"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0cb-zy-ADO" secondAttribute="bottom" id="n51-SU-HmW"/>
+                            <constraint firstItem="Hcj-uE-w5w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xac-EG-yAM"/>
                             <constraint firstItem="qoR-hw-bBw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zf9-Nw-SZ6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="scrollButton" destination="qoR-hw-bBw" id="UPt-or-zWS"/>
-                        <outlet property="stickerView" destination="k80-dR-nXQ" id="V9c-Rf-OfN"/>
                         <outlet property="tableView" destination="0cb-zy-ADO" id="8MA-JP-g5Z"/>
                     </connections>
                 </viewController>
