Default to disabled safe area content adjustment behavior

--- a/TableScrolling/Base.lproj/Main.storyboard
+++ b/TableScrolling/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.23.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.16.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0cb-zy-ADO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cb-zy-ADO">
                                 <rect key="frame" x="0.0" y="58" width="375" height="609"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <sections/>
@@ -45,7 +45,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0cb-zy-ADO" secondAttribute="trailing" id="Zdg-rK-rSv"/>
                             <constraint firstItem="qoR-hw-bBw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bbH-MI-fu1"/>
                             <constraint firstItem="0cb-zy-ADO" firstAttribute="top" secondItem="qoR-hw-bBw" secondAttribute="bottom" constant="8" symbolic="YES" id="fgQ-UA-B1a"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0cb-zy-ADO" secondAttribute="bottom" id="n51-SU-HmW"/>
+                            <constraint firstAttribute="bottom" secondItem="0cb-zy-ADO" secondAttribute="bottom" id="n51-SU-HmW"/>
                             <constraint firstItem="Hcj-uE-w5w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xac-EG-yAM"/>
                             <constraint firstItem="qoR-hw-bBw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zf9-Nw-SZ6"/>
                         </constraints>
